web/styles/left_sidebar.css
/* ... */
/* Low-attention unreads have no bounding box,
   so their counters should be aligned on the
   same baseline as the navigation label. */
.top_left_starred_messages,
.top_left_drafts,
.top_left_scheduled_messages {
    .left-sidebar-navigation-label-container {
        align-items: baseline;
    }

    .left-sidebar-navigation-label {
        @media screen and (resolution <= 1x) {
            /* Owing to the baseline alignment in this
               area, we don't need the low-res line-height
               adjustment. */
            line-height: inherit;
        }
    }

    .filter-icon {
        align-self: center;
    }
}

.top_left_starred_messages {
    &.hide_starred_message_count {
        .masked_unread_count {
            display: flex;
            grid-area: markers-and-unreads;
            /* Extra margin for unreads. */
            margin-right: var(--left-sidebar-unread-offset);
        }

        .unread_count {
            display: none;
        }
        /* When starred message count is 0, we dont want to show unread_count or masked_unread_count. */
        .unread_count.hide + .masked_unread_count {
            display: none;
        }
    }
}

.top_left_starred_messages:hover {
    &.hide_starred_message_count {
        .masked_unread_count {
            display: none;
        }

        .unread_count {
            display: inline;
        }

        .unread_count.hide {
            display: none;
        }
    }
}

.top_left_starred_messages.top-left-active-filter {
    &.hide_starred_message_count {
        .masked_unread_count {
            display: none;
        }

        .unread_count {
            display: inline;
        }

        .unread_count.hide {
            display: none;
        }
    }
}

.conversation-partners {
    grid-area: row-content;
    overflow: hidden;
    text-overflow: ellipsis;
}

.conversation-partners .status-emoji {
    /* Prevent status emoji from colliding
       with unread counts. */
    margin-right: 3px;
    /* To make status emoji look good with
       multiline usernames, we need to fall
       back to inline-block display here. */
    display: inline-block;
    vertical-align: -0.25em;
}

/* New grid definitions here. */
#views-label-container,
.top_left_row,
.left-sidebar-navigation-label-container,
.dm-box,
.subscription_block,
.searching-for-more-topics {
    display: grid;
    align-items: center;
    /* This general pattern of elements applies to every single row in the left
       sidebar, to some degree or another. Eventually, these template areas
       could be applied to all rows, with different `grid-template-column`
       values applied as needed (and shared as needed). For example, an element
       with no "starting-offset" sets that area to `0`; so too with other non-
       existent elements.

       The offsets themselves are meant to greedily assign all of the available
       horizontal space to the content area of the row. That space can then be
       modified or reassigned as needed, without running up against `padding`
       (which alters the box size) or `margin` (which notoriously bleeds outside
       of the element it's defined on). */
    grid-template-areas: "starting-offset starting-anchor-element icon-content-gap row-content controls markers-and-unreads ending-anchor-element ending-offset";
}

.top_left_row {
    /* We stretch the items on the overall
       nav row, so there's no unclickable
       gaps between nav rows. */
    align-items: stretch;
    /* The row grid for the outer .top_left_row
       is chiefly for lefthand spacing and placing
       the inner row content and vdots. */
    grid-template-columns:
        0 0 0 minmax(0, 1fr) 0 0 var(--left-sidebar-vdots-width)
        0;

    .sidebar-menu-icon {
        grid-area: ending-anchor-element;
    }
}

.left-sidebar-filter-input-container {
    display: block;
    margin-bottom: 5px;
    grid-area: filter-container;

    .filter-input,
    .filter-topics {
        grid-area: filter-input;
    }

    /* Keep topic filters to a single line, and show
       an ellipsis when the input loses focus. */
    #left-sidebar-filter-topic-input {
        flex-wrap: nowrap;

        .pill {
            flex-shrink: 0;
        }

        .input {
            white-space: nowrap;
            overflow: hidden;
        }
    }
}

#left-sidebar-navigation-area:has(.selected-home-view.top-left-active-filter)
    .top_left_condensed_unread_marker {
    /* Hide the condensed unread marker when the home view is active,
       since the home view row already shows the unread count. */
    display: none;
}

#views-label-container.showing-condensed-navigation,
.left-sidebar.zoom-in #views-label-container {
    /* Use a next-sibling combinator (+) to use CSS to show and hide
        filter rows as needed, based on the narrow. */
    + #left-sidebar-navigation-list {
        /* In the condensed state, we don't want to generate
            auto rows, or there will be a footprint where the
            expanded nav sits. */
        grid-auto-rows: unset;
        /* When the navigation area is condensed, hide all
            the rows in the full navigation list... */
        & .top_left_row {
            display: none;
        }
        /* ...except when there is an active filter in place:
            that row should still be shown. */
        & .top_left_row.top-left-active-filter {
            display: grid;
            /* In the absence of auto rows in the condensed state,
                we set an explicit height on the active filter. */
            height: var(--line-height-sidebar-row);
        }
    }

    .zulip-icon-heading-triangle-right {
        rotate: 0deg;
    }
}
/* ... */

